<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/side_menu"
        android:theme="@style/ThemeOverlay.AppCompat.Light"/>

    <ImageView
        android:id="@+id/img_head"
        android:layout_below="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_help" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_head"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_head_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:drawablePadding="5dp"
                        android:text="@string/head_descriptipn"
                        android:textColor="@color/colorhtxt"
                        android:textSize="18sp"

                        />

                    <TextView
                        android:id="@+id/txt_fill_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/txt_descriptipn"
                        android:textColor="@color/colorblack"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phoneNumberLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_head_academy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:drawablePadding="5dp"
                        android:text="@string/head_search"
                        android:textColor="@color/colorhtxt"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_fill_academy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/txt_search"
                        android:textColor="@color/colorblack"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/dateOfBirthLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_head_start_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:drawablePadding="5dp"
                        android:text="@string/head_schedule"
                        android:textColor="@color/colorhtxt"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_fill_start_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-light"
                        android:gravity="left"
                        android:text="@string/txt_schedule"
                        android:textColor="@color/colorblack"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/offerHelpListLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_head_engineering"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:drawablePadding="5dp"
                        android:text="@string/head_communication"
                        android:textColor="@color/colorhtxt"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_fill_engineering"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/txt_communication"
                        android:textColor="@color/colorblack"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:id="@+id/contactHelpListLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/contact_head_engineering"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:drawablePadding="5dp"
                            android:text="@string/contact_head_communication"
                            android:textColor="@color/colorhtxt"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/contact_fill_engineering"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:background="@android:color/transparent"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/contact_communication"
                            android:textColor="@color/colorblack"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/grey" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>